fix: refine CSS styles for improved consistency and readability

--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -1,12 +1,6 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 /*# sourceMappingURL=normalize.min.css.map */
 
-*,
-*::before,
-*::after {
-   box-sizing: border-box;
-}
-
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
@@ -14,8 +8,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -44,17 +38,22 @@
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
     --section-tagline-margin: 0;
-    --button-display : inline-block;
-    --button-padding : 1.5rem 3rem;
-    --button-border : 0.2rem solid var(--color-primary);
-    --button-color : var(--color-black);
-    --button-text-decoration : none;
-    --button-front-size : var(--font-size-large);
-    --button-hover-color : var(--color-white);
-    --button-hover-text-decoration : none;
-    --button-hover-background : var(--color-primary);
+    --button-display: inline-block;
+    --button-padding: 1.5rem 3rem;
+    --button-border: 0.2rem solid var(--color-primary);
+    --button-color: var(--color-black);
+    --button-text-decoration: none;
+    --button-font-size: var(--font-size-large);
+    --button-hover-color: var(--color-white);
+    --button-hover-text-decoration: none;
+    --button-hover-background: var(--color-primary);
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 html {
     scroll-behavior: smooth;
@@ -63,19 +62,25 @@ html {
 
 body {
     color: var(--text-color);
-    font-family: var(--font-family-base); 
+    font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
 }
 
 a {
-    color: #161616;
+    color: var(--text-color);
     text-decoration: none;
 }
 
-a:link, 
+a:link {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
 a:visited {
+    color: var(--text-color);
+    text-decoration: none;
     font-style: italic;
 }
 
@@ -91,9 +96,10 @@ a:active {
     display: var(--button-display);
     padding: var(--button-padding);
     border: var(--button-border);
-    font-size: var(--button-front-size);    
+    font-size: var(--button-font-size);
     color: var(--button-color);
     text-decoration: var(--button-text-decoration);
+    
 }
 
 .button:hover {
@@ -110,21 +116,21 @@ a:active {
     color: var(--color-primary);
 }
 
-.card-services .card-title {
+ .card-services .card-title {
     margin: 0;
-}
+ }
 
-.card-services a {
+ .card-services a {
+    padding: 2rem;
     display: block;
-    padding : 2rem;
     background-color: var(--color-light-grey);
-}
+ }
 
-.card-services a:hover {
+ .card-services a:hover {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
-}
+ }
 
 .section {
     padding: var(--section-padding);
@@ -133,15 +139,7 @@ a:active {
 .section-header {
     text-align: var(--section-header-align);
     padding: var(--section-header-padding);
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
+   
 }
 
 .section-title {
@@ -158,6 +156,15 @@ a:active {
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
     margin: var(--section-tagline-margin);
+}
+
+.section-body {
+    padding: var(--section-body-padding);
+}
+
+.section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
 }
 
 .container {
@@ -210,11 +217,11 @@ ul.row {
     list-style: none;
 }
 
-.col-1-3 {
+.col-1-3{
     width: 33.33%;
 }
 
-.col-1-2 {
+.col-1-2{
     width: 50%;
 }
 
@@ -228,20 +235,20 @@ ul.row {
     text-align: right;
 }
 
-.row::after{
+.row::after {
     content: "";
     display: table;
     clear: both;
 }
 
-[class*='col-'] {
+[class*="col-"] {
     float: left;
     padding: 0.5rem;
 }
 
 [data-section-theme="dark"] {
-    --text-color: var(--color-white);   
-    --section-title-color: var(--color-white);   
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
     background-color: var(--color-black);
     --button-color: var(--color-white);
 }
@@ -250,7 +257,7 @@ ul.row {
     color: var(--text-color);
 }
 
-.social-link {
+.social-link{
     display: block;
 }
 
